catkin_ws/logs/backend/build.make.805.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::run(RosHandler&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:79:28: error: expected primary-expression before ‘||’ token
   if (badFrameCounter == 1)||(!nodes.back().badFrameCounter()){ //first time enter bad frame counter
                            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:79:45: error: ‘__gnu_cxx::__alloc_traits<std::allocator<SLAM::Frame> >::value_type’ has no member named ‘badFrameCounter’
   if (badFrameCounter == 1)||(!nodes.back().badFrameCounter()){ //first time enter bad frame counter
                                             ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:79:63: error: expected ‘;’ before ‘{’ token
   if (badFrameCounter == 1)||(!nodes.back().badFrameCounter()){ //first time enter bad frame counter
                                                               ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:341:14: warning: unused variable ‘logName’ [-Wunused-variable]
  static char logName [50];
              ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
